[package]
name = "haversine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.6.1"
serde = {version ="1.0.152", features = ["derive"]}
serde_json = "1.0.93"
simd-json = "0.7.0"

[profile.release]
lto = "thin"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]

